--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
                       </div>
                       <div class="website-view">
                         <a
-                          href="/portfolio/website/01/index.html"
+                          href="./portfolio/website/01/index.html"
                           data-featherlight="iframe"
                         >
                           <i class="fa fa-desktop" aria-hidden="true"></i>
                         </a>
                         <a
-                          href="/portfolio/website/01/m_index.html"
+                          href="./portfolio/website/01/m_index.html"
                           data-featherlight="iframe"
                         >
                           <i class="fa fa-mobile" aria-hidden="true"></i>
@@ -267,13 +267,13 @@
                       </div>
                       <div class="website-view">
                         <a
-                          href="/portfolio/website/02/index.html"
+                          href="./portfolio/website/02/index.html"
                           data-featherlight="iframe"
                         >
                           <i class="fa fa-desktop" aria-hidden="true"></i>
                         </a>
                         <a
-                          href="/portfolio/website/02/m_index.html"
+                          href="./portfolio/website/02/m_index.html"
                           data-featherlight="iframe"
                         >
                           <i class="fa fa-mobile" aria-hidden="true"></i>
@@ -301,13 +301,13 @@
                       </div>
                       <div class="website-view">
                         <a
-                          href="/portfolio/website/03/index.html"
+                          href="./portfolio/website/03/index.html"
                           data-featherlight="iframe"
                         >
                           <i class="fa fa-desktop" aria-hidden="true"></i>
                         </a>
                         <a
-                          href="/portfolio/website/03/m_index.html"
+                          href="./portfolio/website/03/m_index.html"
                           data-featherlight="iframe"
                         >
                           <i class="fa fa-mobile" aria-hidden="true"></i>
@@ -441,7 +441,7 @@
                           <p>제작방식 : HTML + CSS + jQuery + Slick Slider</p>
                         </div>
                         <img
-                          src="/images/portfolio_section/pc_mockup.png"
+                          src="./images/portfolio_section/pc_mockup.png"
                           class="mockup"
                           alt=""
                         />
@@ -469,7 +469,7 @@
                           <p>제작방식 : HTML + CSS + jQuery</p>
                         </div>
                         <img
-                          src="/images/portfolio_section/pc_mockup.png"
+                          src="./images/portfolio_section/pc_mockup.png"
                           class="mockup"
                           alt=""
                         />
