--- a/portfolio/website/04/m_index.html
+++ b/portfolio/website/04/m_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobile_Mockup</title>
-    <link rel="stylesheet" href="/portfolio/website/01/css/m_mockup.css" />
+    <link rel="stylesheet" href="./portfolio/website/01/css/m_mockup.css" />
   </head>
   <body>
     <div class="container">
@@ -17,7 +17,7 @@
         </div>
         <div class="iframe-box">
           <iframe
-            src="/portfolio/website/04/index.html"
+            src="./portfolio/website/04/index.html"
             frameborder="0"
           ></iframe>
         </div>
