--- a/portfolio/website/02/m_index.html
+++ b/portfolio/website/02/m_index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mobile_Mockup</title>
-    <link rel="stylesheet" href="./portfolio/website/01/css/m_mockup.css" />
+    <link rel="stylesheet" href="../02/css/m_mockup.css" />
   </head>
   <body>
     <div class="container">
@@ -16,10 +16,7 @@
           </div>
         </div>
         <div class="iframe-box">
-          <iframe
-            src="./portfolio/website/02/index.html"
-            frameborder="0"
-          ></iframe>
+          <iframe src="../02/index.html" frameborder="0"></iframe>
         </div>
         <div class="frame-bottom">
           <div class="home-btn"></div>
