--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       href="./plugin/featherlight/featherlight_custom.css"
     />
     <link rel="stylesheet" href="./plugin/featherlight/featherlight.css" />
+    <!-- Plugin : WOW -->
+    <script src="./plugin/wow/wow.min.js" defer></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
@@ -93,13 +95,13 @@
           <div class="inner">
             <h2>about me</h2>
             <div class="about-me">
-              <div class="profile-img">
+              <div class="profile-img wow">
                 <img
                   src="./images/about_section/profile_image.png"
                   alt="개인 프로필 이미지"
                 />
               </div>
-              <div class="profile">
+              <div class="profile wow">
                 <h3>신입 웹퍼블리셔 안재원입니다.</h3>
                 <p>
                   코드를 통해 원하는 대로 화면을 그려낼 때 큰 성취감을 느낍니다.
@@ -129,7 +131,7 @@
           <div class="inner">
             <h2>skills & tool</h2>
             <div class="skill-and-tool">
-              <ul class="skill">
+              <ul class="skill wow">
                 <li>
                   <h3>HTML5</h3>
                   <div class="skill-desc">
@@ -166,7 +168,7 @@
                   </div>
                 </li>
               </ul>
-              <ul class="tool">
+              <ul class="tool wow">
                 <li>
                   <h3>PHOTOSHOP</h3>
                   <div class="tool-desc">
