hover_widget_05_append

--- a/index.html
+++ b/index.html
@@ -592,6 +592,16 @@
                             /></a>
                             <span>게임 소개 위젯</span>
                           </li>
+                          <li>
+                            <a
+                              href="./portfolio/widget/hover_effect/05/index.html"
+                              data-featherlight="iframe"
+                              ><img
+                                src="./images/portfolio_section/widget_thumb/hover_effect/05_thumb.png"
+                                alt="아웃라인 텍스트 위젯 썸네일 이미지"
+                            /></a>
+                            <span>아웃라인 텍스트 위젯</span>
+                          </li>
                         </ul>
                       </div>
                       <div class="widget-tab3">
