--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section id="intro" class="intro-section">
           <div class="inner">
             <div class="heading">
-              <h1>AllrightWon's<span>Publishing Portfolio</span></h1>
+              <h1>Web Publishing<span>Portfolio</span></h1>
             </div>
           </div>
         </section>
