--- a/index.html
+++ b/index.html
@@ -173,7 +173,12 @@
                   <h3>PHOTOSHOP</h3>
                   <div class="tool-desc">
                     <i class="xi-photoshop"></i>
-                    <p>포토샵은아직적을게없음ㅋ</p>
+                    <p>
+                      포토샵의 Marquee Tool, Lasso Tool, Brush Tool, Pen Tool 등
+                      기본 툴과 기능을 활용하여 간단한 이미지 작업이 가능합니다.
+                      능숙하게 잘 다루지는 못하나 앞으로도 지속적인 학습을 통해
+                      활용 능력을 향상시킬 계획입니다.
+                    </p>
                   </div>
                 </li>
                 <li>
